NOT-5203: fix cropped error + add english translation

--- a/src/styles/_input-number.sass
+++ b/src/styles/_input-number.sass
@@ -60,3 +60,6 @@
 					border: none !important
 			.ant-input-number-prefix
 				color: $textColor-notino-grayDarker !important
+		&.reviews-toxicity-score-input
+			.ant-form-item-control .ant-form-item-explain
+				height: auto
